--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,7 +5,7 @@ RUN go mod download
 ADD . .
 RUN go build -o /domain_exporter main.go
 
-FROM gcr.io/distroless/base
+FROM gcr.io/distroless/base-debian12
 EXPOSE 9222
 WORKDIR /
 COPY --from=builder /domain_exporter /usr/bin/domain_exporter
