--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,5 +11,6 @@ FROM gcr.io/distroless/base-debian12
 EXPOSE 9222
 WORKDIR /
 COPY --from=busybox /bin/sh /bin/sh
+COPY --from=busybox /bin/wget /bin/wget
 COPY --from=builder /domain_exporter /usr/bin/domain_exporter
 ENTRYPOINT ["/usr/bin/domain_exporter"]
